Touch up code, added QoL for pressing enter to answer/restart